# Production_RAG_System

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  ragas_result.csv  results.json  run_evaluator.py  streamlit_app.py
.streamlit/: config.toml
src/chunking/: chunker.py
src/evaluation/: evaluator.py
src/ingestion/: loader.py
src/llm/: llm_client.py
src/pipeline/: rag_pipeline.py
src/prompts/: prompt_templates.py
src/query_enhancer/: enhancer.py
src/reranking/: reranker.py
src/retrieval/: retriever.py
src/vectordb/: vector_store.py
