[project]
name = "production-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "en-core-web-sm",
    "fastembed>=0.8.0",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-google-genai>=0.9.5",
    "llama-index-llms-groq>=0.5.0",
    "llama-index-vector-stores-qdrant>=0.10.1",
    "openai>=2.40.0",
    "pymupdf>=1.27.2.3",
    "ragas>=0.4.3",
    "spacy>=3.8.14",
    "streamlit>=1.58.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
